Scroll bug on ios

--- a/app/theme/app.core.scss
+++ b/app/theme/app.core.scss
@@ -71,11 +71,11 @@ body {
 
 
 map {
-  position: absolute;
-  bottom: 0;
-  top: 97px;
-  left: 0;
-  right: 0;
+  //position: absolute;
+  //bottom: 0;
+  //top: 97px;
+  //left: 0;
+  //right: 0;
 
 
 }
@@ -110,21 +110,22 @@ div.error-wrap {
   width: 100%;
   height: 100%;
 
-  .loading{
-    animation: loading 1s linear infinite;
-  }
-
-  @keyframes loading {
-    0% { transform: scale(1.2); }
-    50% { transform: scale(1); }
-    100% { transform: scale(1.2); }
-  }
+  //.loading{
+  //  animation: loading 1s linear infinite;
+  //}
+  //
+  //@keyframes loading {
+  //  0% { transform: scale(1.2); }
+  //  50% { transform: scale(1); }
+  //  100% { transform: scale(1.2); }
+  //}
 
   .btn {
     width: 55px;
     height: 55px;
-    position: absolute;
+    position: fixed;
     right: 5px;
+    z-index: 50;
 
     &.locate {
       background: url('../res/btn_locate.png') no-repeat;
@@ -178,11 +179,11 @@ div.error-wrap {
       background-size: 100% 100%;
     }
 
-    position: absolute;
+    position: fixed;
     display: inline-block;
-    z-index: 1;
-    top: 0;
-    bottom: 0;
+    z-index: 50;
+    //top: 0;
+    bottom: 37%;
     left: 0;
     right: 0;
     margin: auto;
